Pressure should not be set when the pointer device doesn't support pressure.

When pointer events have a pointer type of mouse, we should not set their pressure,
the default value is 0.5 according to the spec.

In Cocoa Event doc, the pressure is only set for events with a subtype of NSTabletPointEventSubtype.
https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/EventOverview/EventObjectsTypes/EventObjectsTypes.html#//apple_ref/doc/uid/10000060i-CH4-SW4

BUG=648375

Review-Url: https://codereview.chromium.org/2361523002
Cr-Commit-Position: refs/heads/master@{#420161}

Former-commit-id: d0d3d88e1c94e01fb14ecdb3a11f786859236d5b